--- a/css/style.css
+++ b/css/style.css
@@ -48,11 +48,11 @@ body {
     cursor: pointer;
     font-weight: bold;
   }
-  .buttons{
-    button{
-    i{
-      font-size: 30px;
-    }
+  .buttons {
+    button {
+      i {
+        font-size: 30px;
+      }
     }
   }
 }
@@ -128,6 +128,204 @@ body {
   }
 }
 /* ########################################################### */
+.cards {
+  margin-left: 15%;
+
+  .card-contaner {
+    width: 60%;
+    height: 85vh;
+    background-color: white;
+    border-radius: 5px;
+    /* padding: 15px; */
+    .card-wriper {
+      .card-text {
+        display: flex;
+        justify-content: space-between;
+        padding-top: 20px;
+        .left-text {
+          cursor: pointer;
+        }
+        .right-text {
+          cursor: pointer;
+          button {
+            background-color: transparent;
+            border: none;
+            color: black;
+            font-size: 15px;
+            cursor: pointer;
+            padding-right: 20px;
+            cursor: pointer;
+          }
+        }
+      }
+      .chemiical-name {
+        width: 75%;
+        height: 40vh;
+        margin: 5% 10%;
+        background-color: gold;
+      }
+    }
+    .icones-contaner {
+      display: flex;
+      justify-content: space-between;
+      background-color: rgb(255, 255, 255);
+      padding: 50px 25px 30px;
+      border-bottom: #6f6c6c;
+      margin-top: 0;
+      border-radius: 0px 0px 20px 20px;
+      position: relative;
+      box-shadow: 8px 10px 30px rgba(0, 0, 0, 0.15);
+      .laft-icone {
+        button {
+          text-align: left;
+          padding: 15px;
+          cursor: pointer;
+          border-radius: 100%;
+
+          i {
+            padding-left: 7px;
+            margin: 5px;
+            text-align: center;
+          }
+        }
+      }
+      .movement-conterolerr {
+        display: flex;
+        justify-content: space-between;
+        margin: 0px 10px;
+        button {
+          padding: 0px 14px;
+          border-radius: 100%;
+          margin-left: 10px;
+          margin-right: 5px;
+          cursor: pointer;
+        }
+      }
+      .right-icone {
+        button {
+          padding: 20px 16px;
+          cursor: pointer;
+          i {
+            text-align: center;
+          }
+        }
+      }
+    }
+    .larg-button {
+      button {
+        width: 100%;
+        height: 50px;
+        background-color: blue;
+        border-color: transparent;
+        color: white;
+        margin-top: 15px;
+        font-size: 24px;
+        cursor: pointe;
+        border-radius: 5px 5px 5px 5px;
+        border: bottom style 20px;
+      }
+    }
+  }
+}
+/* #################################################################### */
+
+.logo-icone {
+  display: block;
+  margin: 10px 0 0 10%;
+
+  button {
+    padding: 40px;
+    background-color: #fff;
+    border-radius: 100%;
+    font-size: 30px;
+  }
+  sub {
+    text-align: center;
+    justify-content: center;
+    margin-top: 1%;
+    color: #6f6c6c;
+  }
+  pre {
+    text-align: center;
+    justify-content: space-between;
+    display: flex;
+    color: black;
+    font-size: 20px;
+    span {
+     padding-left: 10px;
+    }
+  }
+}
+
+/* ################################################################### */
+.scrole-card-contaner {
+  .scrole-card-titel {
+    margin: 10px 10% 10% 10%;
+    background-color: rgb(217, 215, 215);
+    padding: 10vh;
+    border-radius: 20px;
+    .scrole-contener {
+      gap: 20px;
+      .scrole-card-linle {
+        display: flex;
+
+        a {
+          text-align: left;
+          text-decoration: none;
+          color: black;
+          font-size: 20px;
+          padding: 10px;
+          justify-content: space-between;
+          border-color: #6f6c6c;
+        }
+      }
+
+      .card-container {
+        display: flex;
+        overflow-x: auto;
+        padding: 20px;
+        gap: 16px;
+        scroll-snap-type: x mandatory;
+      }
+
+      .card-container::-webkit-scrollbar {
+        height: 10px;
+      }
+
+      .card-container::-webkit-scrollbar-thumb {
+        background-color: #ccc;
+        border-radius: 4px;
+      }
+
+      .card {
+        min-width: 300px;
+        height: 200px;
+        background: linear-gradient(to bottom right, #f2f2f3, #ebf8e1);
+        border-radius: 16px;
+        padding: 20px;
+        flex-shrink: 0;
+        scroll-snap-align: start;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      }
+    }
+  }
+}
+/* ######################################################### */
+.peractes-question{
+  .question-contener{
+    .question-icone{
+      span{
+
+      }
+      button{
+        
+      }
+
+    }
+  }
+}
+
+/* ######################################################### */
 .chemical-contener {
   .element-termes {
     h1 {
@@ -136,29 +334,29 @@ body {
     }
   }
   .element-term-container {
-    width: 80%;
-    height: 500vh;
-    margin: 10%;
+    width: 60%;
+    height: 493vh;
+    margin: 8%;
     background-color: rgb(238, 238, 238);
-    padding: 3vh 0vh;
+    padding: 1vh 0vh;
     border-radius: 20px;
 
     text-align: center;
     align-items: center;
     .element {
       display: grid;
-      grid-template-columns: 10fr;
-      grid-gap: 5%;
+      grid-template-columns: 5fr;
+      grid-gap: 2%;
       background-color: #fff;
-      padding: 15vh 60vh;
+      padding: 2vh 30vh;
       margin: 2%;
-      border-radius: 5%;
+      border-radius: 5px;
       .contant {
-        width: 10%;
+        width: 5%;
         display: flex;
         justify-content: start;
         h3 {
-          padding-left :0px;
+          padding-left: 0px;
           font-size: 20px;
           color: rgb(18, 17, 17);
           text-align: left;
@@ -168,7 +366,7 @@ body {
           border-left: 2px solid rgb(48, 47, 47);
           height: 150px;
         }
-        img{
+        img {
           width: 100px;
           height: 100px;
           margin-left: 20px;
@@ -234,13 +432,19 @@ footer {
         margin-left: 10%;
         margin-right: 20%;
         display: flex;
-        justify-content: space-between;
+        align-items: start;
         text-align: left;
         li {
           list-style: none;
 
           a {
             text-decoration: none;
+            i {
+              font-size: 20px;
+              color: rgb(151, 149, 149);
+              margin-left: 5px;
+              padding: 15px;
+            }
           }
         }
       }
